falling into the OOP trap of 'might want to change this later'

--- a/templates/starter.html
+++ b/templates/starter.html
@@ -111,7 +111,9 @@
                 <!--end changeLinks-->
 
                 <!--Links content-->
-                <div class = "center row"id="link_content">
+                <div class = "togg_on" id="link_chunk">
+                    <div class = "center row"id="link_content">
+                    </div>
                 </div>
                 <hr>
                 <!--end Links content-->
