added start of importing a DB

--- a/templates/starter.html
+++ b/templates/starter.html
@@ -49,7 +49,7 @@
     {% if debug == True %}
     meth : {{meth}}
     <br>
-    prev_tables : {{ tab_counter }}
+    schema : {{schema}}
     {% endif %}
     <hr>
     </div>
