finished tables in rev2

--- a/templates/rev2.html
+++ b/templates/rev2.html
@@ -17,13 +17,30 @@
 </head>
 
 <template id="table_template">
-    <div class="container">
         <div class="row">
             <div class = "col">
-                TRASDFSDG
+                IF YOUR SEEING ME YOU BROKE SOMETHING
             </div>
         </div>
-    </div>
+        <hr>
+</template>
+
+<template id="link_template">
+        <div class="row">
+            <select class = "col" id = "sel1">
+                <option value =""disabled>SELECT ME</option>
+            </select>
+            <select class = "col" id = "sel2">
+                <option value ="" disabled>SELECT ME</option>
+            </select>
+            <select class = "col">
+                <option value ="INNER">INNER</option>
+                <option value ="LEFT">LEFT</option>
+                <option value ="RIGHT">RIGHT</option>
+                <option value ="FULL">FULL</option>
+            </select>
+        </div>
+        <hr>
 </template>
 
 
