start of link subtable handler

--- a/templates/rev2.html
+++ b/templates/rev2.html
@@ -37,7 +37,7 @@
             <select class = "col" id = "sel_2_name">
                 <option value =""disabled selected hidden>SELECT ME</option>
             </select>
-            <select class = "col" id = "sel_1_data" disabled>
+            <select class = "col" id = "sel_2_data" disabled>
                 <option value ="" disabled selected hidden>SELECT TABLE 2</option>
             </select>
             <select class = "col">
@@ -141,9 +141,8 @@
                 <!-- change Links -->
                 <div class="row">
                     <button type='button' class='col btn btn-success' name='adj_tables_counter_bttn' onclick="link.add()">Add New Table</button>
-                    <button type='button' class='col btn btn-danger' name='adj_tables_counter_bttn' onclick="link.remove()">Remove Last Table</button>
+                    <button type='button' class='col btn btn-danger' name='adj_tables_counter_bttn' onclick="link.remove()">Remove (NYI))</button>
                     <button type='button' class='col btn btn-info' name='adj_tables_counter_bttn' onclick="generic.togg('link')">Toggle show Tables</button>
-                    <button type='button' class='col btn btn-success' name='adj_tables_counter_bttn' onclick="link.refresh()">save and refresh</button>
                 </div>
                 <hr>
                 <!--end changeLinks-->
