--- a/static/style.css
+++ b/static/style.css
@@ -25,8 +25,8 @@
     visibility: hidden;
 }
 
-input{
-    border: 1px solid #00b7ff;
+[disabled]{
+    border: 1px solid #6b0101;
 }
 .sticky_alert{
     position: sticky;
